<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/bottom_home"
        android:enabled="true"
        android:icon="@drawable/baseline_home_filled_24"
        android:title="@string/home"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/bottom_calender"
        android:enabled="true"
        android:icon="@drawable/baseline_calendar_month_24"
        android:title="@string/calendar"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/bottom_search"
        android:enabled="true"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/bottom_diary"
        android:enabled="true"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/mine"
        app:showAsAction="ifRoom"/>
</menu>