<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ithink.dailytodo.Activity.AddTodoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout2"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="12dp"
            android:text="@string/add_todo"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/add_todo_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="4dp"
            android:hint="@string/title"
            android:inputType="text"
            android:textColor="@color/text" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="4dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/start_date"
                android:textColor="@color/text"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="12dp"
                app:cardBackgroundColor="@color/gray"
                app:cardCornerRadius="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/materialCardView2"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/black"
                app:strokeWidth="1dp">

                <TextView
                    android:id="@+id/todo_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/text"
                    android:textSize="18sp" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView2"
                android:layout_width="96dp"
                android:layout_height="48dp"
                android:layout_marginStart="12dp"
                app:cardBackgroundColor="@color/gray"
                app:cardCornerRadius="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/black"
                app:strokeWidth="1dp">

                <TextView
                    android:id="@+id/todo_time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="12:00"
                    android:textColor="@color/text"
                    android:textSize="18sp" />

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/end_date"
                android:textColor="@color/text"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView3"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="12dp"
                app:cardBackgroundColor="@color/gray"
                app:cardCornerRadius="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/materialCardView4"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/black"
                app:strokeWidth="1dp">

                <TextView
                    android:id="@+id/todo_date2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/text"
                    android:textSize="18sp" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView4"
                android:layout_width="96dp"
                android:layout_height="48dp"
                app:cardBackgroundColor="@color/gray"
                app:cardCornerRadius="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/black"
                app:strokeWidth="1dp">

                <TextView
                    android:id="@+id/todo_time2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="12:00"
                    android:textColor="@color/text"
                    android:textSize="18sp" />

            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/const1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:paddingVertical="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:text="@string/all_day"
                android:gravity="center_vertical"
                android:textColor="@color/text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/add_todo_switch"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="15dp"
            android:background="@color/drawable" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:text="@string/double_check"
                android:paddingVertical="8dp"
                android:gravity="center_vertical"
                android:textColor="@color/text"
                android:textSize="18sp"
                android:drawablePadding="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:drawableLeftCompat="@drawable/baseline_priority_high_24" />

            <Switch
                android:id="@+id/add_todo_switch2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="15dp"
            android:background="@color/drawable" />

        <TextView
            android:id="@+id/todo_alarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:drawablePadding="16dp"
            android:paddingVertical="8dp"
            android:text="@string/no_alert"
            android:gravity="center_vertical"
            android:textColor="@color/text"
            android:textSize="18sp"
            app:drawableLeftCompat="@drawable/baseline_notifications_active_24" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="15dp"
            android:background="@color/drawable" />

        <EditText
            android:id="@+id/todo_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:background="@android:color/transparent"
            android:drawablePadding="16dp"
            android:hint="@string/location"
            android:inputType="text"
            android:gravity="center_vertical"
            android:maxLength="30"
            android:paddingVertical="8dp"
            android:textColor="@color/text"
            android:textSize="18sp"
            app:drawableLeftCompat="@drawable/baseline_location_pin_24" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="15dp"
            android:background="@color/drawable" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="8dp">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="3dp"
                android:contentDescription="@string/image"
                android:src="@drawable/baseline_article_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/todo_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:background="@android:color/transparent"
                android:gravity="start"
                android:hint="@string/notes"
                android:inputType="textMultiLine"
                android:maxLength="2000"
                android:textColor="@color/text"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/todo_cancel"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@color/gray"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/todo_save"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@color/blue_dark"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>